# UzoPythontoRust

./: Makefile  README.md  analyze_health_and_income.py  average.py  main.py  main2.py  profile.html  requirements.txt  test_main.py
mylib/: utils.py
rustlib/: Cargo.toml
rustlib/src/: main.rs
tests/: test.rs
